Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/College_University_Name__c.field-meta.xml
<CustomField>
    <fullName>College_University_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>College/University Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>