Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact No</label>
    <type>Phone</type>
</CustomField>