Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Intern_Id__c.field-meta.xml
<CustomField>
    <fullName>Intern_Id__c</fullName>
    <displayFormat>Id-{000}</displayFormat>
    <label>Intern Id</label>
    <type>AutoNumber</type>
</CustomField>