Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Intern_Name__c.field-meta.xml
<CustomField>
    <fullName>Intern_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intern Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>