Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>