Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stream</label>
    <length>50</length>
    <type>Text</type>
</CustomField>