Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>