Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sudhir</fullName>
            </value>
            <value>
                <fullName>Surender</fullName>
            </value>
            <value>
                <fullName>Shubham</fullName>
            </value>
            <value>
                <fullName>Sachin</fullName>
            </value>
            <value>
                <fullName>Somesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>