Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/fields/Training_Duration__c.field-meta.xml
<CustomField>
    <fullName>Training_Duration__c</fullName>
    <formula>End_Date__c  - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>