Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/recordTypes/Internship.recordType-meta.xml
<RecordType>
    <fullName>Internship</fullName>
    <active>true</active>
    <description>Details of Intern</description>
    <label>Internship</label>
</RecordType>