Githubsalesforcebackup/force-app/main/default/objects/Training_Program__c/recordTypes/Trainee.recordType-meta.xml
<RecordType>
    <fullName>Trainee</fullName>
    <active>true</active>
    <description>Details of Trainee</description>
    <label>Trainee</label>
</RecordType>